--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/"
 @model China_Tudor_Labb2.Pages.Books.IndexModel
 
 @{
@@ -10,11 +10,29 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+<form asp-page="./Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by Book Title / Author Name:
+            <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+            <input type="submit" value="Search" class="btn btn-primary" /> |
+            <a asp-page="./Index">Back to full List</a>
+        </p>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
+
             <th>
+                 <a asp-page="./Index" asp-route-sortOrder="@Model.TitleSort">
                 @Html.DisplayNameFor(model => model.Book[0].Title)
+                </a>
+            </th>
+            <th>
+                <a asp-page="./Index" asp-route-sortOrder="@Model.AuthorSort">
+                @Html.DisplayNameFor(model => model.Book[0].Author.FullName) 
+                </a>
             </th>
            
             <th>
@@ -27,17 +45,29 @@
                 @Html.DisplayNameFor(model => model.Book[0].Publisher.PublisherName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Book[0].Authors.FirstName) @Html.DisplayNameFor(model => model.Book[0].Authors.LastName)
+                @Html.DisplayNameFor(model => model.Book[0].BookCategories)
             </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Book) {
-        <tr>
+        @foreach (var item in Model.BookD.Books)
+        {
+
+            string selectedRow = "";
+            if (item.ID == Model.BookID)
+            {
+                selectedRow = "table-success";
+            }
+
+            <tr class="@selectedRow">
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Author.FullName) 
+                </td>
 
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
@@ -49,8 +79,14 @@
                     @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Authors.FirstName) @Html.DisplayFor(modelItem => item.Authors.LastName)
+                    @{
+                        foreach (var category in item.BookCategories)
+                        {
+                            @category.Category.ID @:  @category.Category.CategoryName <br />
+                        }
+                    }
                 </td>
+
 
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
