--- a/Pages/Books/Details.cshtml
+++ b/Pages/Books/Details.cshtml
@@ -31,6 +31,20 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Book.PublishingDate)
         </dd>
+        <dt class="col-sm-2">
+            Categories
+        </dt>
+        <dd class="col-sm-10">
+            <ul>
+                @foreach (var category in Model.Book.BookCategories)
+                {
+                    <li>@category.Category.CategoryName</li>
+                }
+            </ul>
+        </dd>
+
+        
+
     </dl>
 </div>
 <div>
